Change in index.html andcss for a different zoom hover effect

--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -69,7 +69,7 @@ figure {
 		height: 100%;
 		padding: 2em;
 		color: #fff;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		font-size: 1em;
 		// opacity: 0;
 	}
@@ -91,10 +91,10 @@ figure {
 	    p{
 			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 			transition: opacity 0.35s, transform 0.35s;
-			margin-top: 45%;
+			margin-top: 30%;
 			padding: 1.5em;
 			letter-spacing: 1px;
-			text-align: center;
+			text-align: left;
 			text-transform: none;
 			font-size: 1.1em;
 			opacity: 0;
@@ -108,6 +108,7 @@ figure {
 			opacity: 0;
 			// margin: 10% 0 10px 0;
 			padding: 0;
+			text-align: left;
 			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 			transition: opacity 0.35s, transform 0.35s;
 			-webkit-transform: scale3d(0.8,0.8,1);
@@ -126,8 +127,61 @@ figure {
 			transform: scale3d(1,1,1);
 	    }
 	}
-}
+	//Zoom image with text and paragraph with border effect.
 
+	&.effect-zoom-color-border{
+		background: -webkit-linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
+		background: linear-gradient(180deg, #dc686f 0%,#f16e48 100%);
+		img{
+			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+			transition: opacity 0.35s, transform 0.35s;
+		}
+		p{
+			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+			transition: opacity 0.35s, transform 0.35s;
+			position: absolute;
+			text-align: center;
+			bottom: 0;
+			left: 0;
+			margin: 20px;
+			padding: 30px;
+			border: 2px solid #fff;
+			text-transform: none;
+			font-size: 1em;
+			letter-spacing: 1px;
+			opacity: 0;
+			-webkit-transform: scale3d(0.8,0.8,1);
+			transform: scale3d(0.8,0.8,1);
+			-webkit-transform-origin: 50% -100%;
+			transform-origin: 50% -100%;
+		}
+		h2{
+			padding: 0;
+			opacity: 0;
+			margin-top: -10px;
+			-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+			transition: opacity 0.35s, transform 0.35s;
+			-webkit-transform: scale3d(0.8,0.8,1);
+			transform: scale3d(0.8,0.8,1);
+			-webkit-transform-origin: 50% 100%;
+			transform-origin: 50% 100%;
+			font-size: 2em;
+			// @media (max-width: 767px){
+			// 	font-size: 80%;
+			// }
+		}
+		&:hover img{
+			opacity: 0.04;
+			-webkit-transform: scale3d(1.1,1.1,1);
+			transform: scale3d(1.1,1.1,1);
+		}
+		&:hover p, &:hover h2{
+			opacity: 1;
+			-webkit-transform: scale3d(1,1,1);
+			transform: scale3d(1,1,1);
+		}
+	}
+}
 
 /////////////////////////////////////////
 #cali-map{
