--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -1,3 +1,6 @@
+html{
+	height: 100%;
+}
 body{
 	font-family: $textFont;
 	color: $slate;
@@ -181,6 +184,85 @@ figure {
 			transform: scale3d(1,1,1);
 		}
 	}
+}
+// Codrops fixed background prallax scroll 
+// code: http://tympanus.net/codrops/2013/05/02/fixed-background-scrolling-layout/
+/* Set all parents to full height */ 
+.container,
+.cbp-fbscroller,
+.cbp-fbscroller section { 
+	height: 100%; 
+}
+
+/* The nav is fixed on the right side  and we center it by translating it 50% 
+(we don't know it's height so we can't use the negative margin trick) */
+.cbp-fbscroller > nav {
+	position: fixed;
+	z-index: 9999;
+	right: 100px;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.cbp-fbscroller > nav a {
+	display: block;
+	position: relative;
+	color: transparent;
+	height: 50px;
+}
+
+.cbp-fbscroller > nav a:after {
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	border: 3px solid #fff;
+}
+
+.cbp-fbscroller > nav a:hover:after {
+	background: rgba(255,255,255,0.6);
+}
+
+.cbp-fbscroller > nav a.cbp-fbcurrent:after {
+	background: #fff;
+}
+
+/* background-attachment does the trick */
+.cbp-fbscroller section {
+	position: relative;
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+#fbsection1 {
+	// background-image: url(../img/1.jpg);
+	background-image: url("http://placehold.it/2400x1080/b9e0ca/ffffff");
+}
+
+#fbsection2 {
+	// background-image: url(../img/2.jpg);
+	background-image: url("http://placehold.it/2400x1080/f16e48/ffffff");
+}
+
+#fbsection3 {
+	// background-image: url(../img/3.jpg);
+	background-image: url("http://placehold.it/2400x1080/dc686f/ffffff");
+}
+
+#fbsection4 {
+	// background-image: url(../img/4.jpg);
+	background-image: url("http://placehold.it/2400x1080/245772/ffffff");
+}
+
+#fbsection5 {
+	// background-image: url(../img/5.jpg);
+	background-image: url("http://placehold.it/2400x1080/3e788b/ffffff");
 }
 
 /////////////////////////////////////////
