--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -352,22 +352,19 @@ span:nth-child(2) {
 	  margin: 0;
 	  list-style: none;
 	  padding: 0;
-	}
-
-	li {
+	  li {
 	  padding-top: 0;
 	  font-size: 20px;
 	  color: white; 
 
+	  	a {
+		  	display: block;
+		  	text-decoration: none;
+		  	&:hover{
+			color: green;
+			background-color: #6b6868;
+			}
+		}
 	}
-	ul li a {
-	  display: block;
-	  text-decoration: none;
-	}
-
-	ul li a:hover {
-
-	color: green;
-	background-color: #6b6868;
 	}
 }
