--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -198,7 +198,7 @@ figure {
 (we don't know it's height so we can't use the negative margin trick) */
 .cbp-fbscroller > nav {
 	position: fixed;
-	z-index: 9999;
+	z-index: 9;
 	right: 100px;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
@@ -280,7 +280,7 @@ footer {
 }
 
 ////////////////////////////////////////
-// Toggle Nav Left
+// Toggle Nav Left from Chrys
 
 b {
   position: fixed;
@@ -341,6 +341,7 @@ span:nth-child(2) {
 
 .hidden {
   width: 80px;
+  float: left;
   fill: white;
   border: 1px solid #020202;
 }
@@ -348,23 +349,185 @@ span:nth-child(2) {
 .menu {
   margin-top: 60px;
   /*background-color: red;*/
-  ul {
-	  margin: 0;
-	  list-style: none;
-	  padding: 0;
-	  li {
-	  padding-top: 0;
-	  font-size: 20px;
-	  color: white; 
+ //  ul {
+	//   margin: 0;
+	//   list-style: none;
+	//   padding: 0;
+	// }
 
-	  	a {
-		  	display: block;
-		  	text-decoration: none;
-		  	&:hover{
-			color: green;
-			background-color: #6b6868;
-			}
-		}
+	// li {
+	//   padding-top: 0;
+	//   font-size: 20px;
+	//   color: white; 
+
+	// }
+	// ul li a {
+	//   display: block;
+	//   text-decoration: none;
+	// }
+
+	// ul li a:hover {
+
+	// color: green;
+	// background-color: #6b6868;
+	// }
+}
+.side-navigation{
+	width: 80px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+/* Navigation Menu*/
+.navigation {
+
+  width: 80px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11000;
+
+
+  list-style: none;
+  background: #1D1B1F;
+
+
+  padding-top: 0px;
+}
+
+
+
+.nav-item {
+
+  float: left;
+
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #000;
+
+
+
+}
+
+.nav-item a {
+	height: 80px;
+	width: 80px;/* non-critical appearance styles */
+	display: block;
+	padding: 1em;
+	padding-left: 20px;
+	padding-top: 16px;
+	/* background: linear-gradient(135deg, rgba(0,0,0,0) 0%,rgba(0,0,0,5.65) 100%);*/
+	background-color:#1D1B1F;
+	color: white;
+	font-size: 1em;
+	text-decoration: none;
+	transition: color 0.1s, background 0.2s;
+	-webkit-transition: color 0.1s, background 0.2s;
+	-moz-transition: color 0.1s, background 0.2s;
+	-o-transition: color 0.1s, background 0.2s;
+	-ms-transition: color 0.1s, background 0.2s;
+}
+
+
+.nav-item a img{
+
+
 	}
-	}
+
+
+.nav-item a:hover,
+.nav-item a:active {
+  background-color: #FF5C5C;
+
+}
+
+
+/* Site Wrapper - Everything that isn't navigation */
+.site-wrap {
+  /* Critical position and size styles */
+  min-height: 100%;
+  min-width: 100%;
+  background-color: #1D1B1F; /* Needs a background or else the nav will show through */
+  top: 0;
+  right: 0;
+  z-index: 1;
+  position: relative;
+  /* non-critical apperance styles */
+  padding-top: 0px;
+  background-size: 200%;
+}
+/* Nav Trigger */
+.nav-trigger {
+  /* critical styles - hide the checkbox input*/
+  position: fixed;
+  z-index: 12000;
+  clip: rect(0, 0, 0, 0);
+}
+
+label[for="nav-trigger"] {
+  /* critical positioning styles */
+	-webkit-transform: translate3d(0,0,0);
+  position: fixed;
+  left: 100px; 
+  top: 100px;
+  z-index: 12000;
+
+  /* non-critical apperance styles */
+  height:50px;
+  width: 50px;
+  padding: 10px;
+  cursor: pointer;
+  background-image: url(../img/menu.png);
+  background-repeat:no-repeat;
+  background-size: 30px 30px;
+	background-position: center;
+}
+
+
+/* Push Effect */
+
+.nav-trigger + label, .site-wrap {
+	-webkit-transition: -webkit-transform 0.4s;
+	-moz-transition: transform 0.4s;
+	-o-transition: transform 0.4s;
+	-ms-transition: transform 0.4s;
+	transition: transform 0.4s;
+}
+
+/*.nav-trigger + label, .site-wrap {
+	-webkit-transition: right 0.4s;
+	-moz-transition: right 0.4s;
+	-o-transition: right 0.4s;
+	-ms-transition: right 0.4s;
+	transition: right 0.4s;
+}
+
+.nav-trigger:checked + label {
+  right: 110px;
+}*/
+
+.nav-trigger:checked ~ .site-wrap {
+  box-shadow: 0 0 1px 2px rgba(0,0,0,0.5);
+}
+
+// Black&white filter on top of thumbnail images with color hover effect
+.primary img {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  /* Firefox 10+, Firefox on Android */
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+  /* IE 6-9 */
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+ 
+.primary:hover img {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0'/></filter></svg>#grayscale");
+  -webkit-filter: none;
+  filter: none;
 }
