--- a/css/style.scss
+++ b/css/style.scss
@@ -5,4 +5,6 @@
 @import "partials/classes";
 
 @import "partials/theme";
-@import "partials/pushmenu"
+@import "partials/pushmenu";
+@import "partials/themecity";
+@import "partials/hover";
