--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -533,3 +533,70 @@ label[for="nav-trigger"] {
   -webkit-filter: none;
   filter: none;
 }
+//HTML5 video section
+
+#big-video {
+    position: relative;
+    background: #000;
+    overflow: hidden;
+    @media (min-width: 1200px){
+    	min-height: 720px;
+    }
+    @media (min-width:468px) and (max-width: 1199px){
+		min-height: 480px;
+    }
+    @media (max-width:467px){
+    	min-height: 300px;
+    }
+}
+
+#big-video .video {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+#big-video video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+#big-video .video-element {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+}
+
+.overlayheadlines {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.headlines{
+	position: relative;
+    z-index: 2;
+    width: 100%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    opacity: 1;
+    // color: white;
+  	text-shadow: 1px 1px 1px rgba(150, 150, 165, 0.7);
+    -webkit-transition: 500ms opacity;
+    -moz-transition: 500ms opacity;
+    -o-transition: 500ms opacity;
+    -ms-transition: 500ms opacity;
+    transition: 500ms opacity;
+}
