--- a/css/partials/_themecity.scss
+++ b/css/partials/_themecity.scss
@@ -3,25 +3,25 @@
 
 #ctsection1 {
 	// background-image: url(../img/1.jpg);
-	background-image: url("../img/02.png");
+	background-image: url("../img/city-02.jpg");
 }
 
 #ctsection2 {
 	// background-image: url(../img/2.jpg);
-	background-image: url("../img/03.png");
+	background-image: url("../img/city-03.jpg");
 }
 
 #ctsection3 {
 	// background-image: url(../img/3.jpg);
-	background-image: url("../img/04.png");
+	background-image: url("../img/city-04.jpg");
 }
 
 #ctsection4 {
 	// background-image: url(../img/4.jpg);
-	background-image: url("../img/05.png");
+	background-image: url("../img/city-05.jpg");
 }
 
 #ctsection5 {
 	// background-image: url(../img/5.jpg);
-	background-image: url("../img/01.png");
+	background-image: url("../img/city-01.jpg");
 }
