--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -347,6 +347,15 @@ span:nth-child(2) {
   }
 }
 
+body.open .transparent-overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0, 0.7);
+	z-index: 10;
+}
 
 
 .menu {
@@ -601,3 +610,25 @@ label[for="nav-trigger"] {
     -ms-transition: 500ms opacity;
     transition: 500ms opacity;
 }
+
+
+
+
+
+// body.open .transparent-overlay {
+// 	position: fixed;
+// 	left: 0;
+// 	top: 0;
+// 	width: 100%;
+// 	height: 100%;
+// 	background: rgba(0,0,0, 0.7);
+// 	z-index: 10;
+// }
+
+
+
+
+
+
+
+
