add modal to category-city-sai.html

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,4 +5,8 @@
 @import "partials/classes";
 
 @import "partials/theme";
-@import "partials/pushmenu"
+@import "partials/pushmenu";
+@import "partials/themecity";
+@import "partials/hover";
+@import "partials/smoothslider";
+@import "partials/city-sai"
