--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -14,6 +14,7 @@ body{
 	 -webkit-font-feature-settings: "kern" 1;
 	 font-feature-settings: "kern" 1; 
 	 height: 100%; 
+	 width: 100%;
 }
 
 h1{
@@ -47,7 +48,7 @@ h3{
 
 #travel-category{
 	@media (min-width: 640px){
-		padding: 3em 4em;
+		padding: 6em 4em 4em 4em;
 	}
 	@media (max-width: 640px){
 		padding: 2em 2em;
@@ -265,6 +266,8 @@ figure {
 	background-image: url("http://placehold.it/2400x1080/3e788b/ffffff");
 }
 
+
+
 /////////////////////////////////////////
 #cali-map{
 	background-color: $teal;
@@ -282,10 +285,10 @@ footer {
 ////////////////////////////////////////
 // Toggle Nav Left from Chrys
 
-b {
+.b {
   position: fixed;
   top: 20px;
-  left: 20px;
+  left: 100px;
   z-index: 12000;
   width: 36px;
   height: 36px;
@@ -295,6 +298,10 @@ b {
   border: 1px solid rgba(0,40,60,.2);
   tap-highlight-color: transparent;
   cursor: pointer;
+  //background-color: white;
+  opacity: 1;
+  -webkit-transition:opacity 0.3s;
+  transition:opacity 0.3s;
 
 }
 span {
@@ -304,26 +311,21 @@ span {
   background: rgb(0,40,60);
   transition: .7s;
   pointer-events: none;
+  background-color: white;
 }
 span:nth-child(2) {
   margin: 3px 0;
 }
-.open {
-  border-color: rgba(255,255,255,.2);
+
+
+.hidden_1 {
+  width: 80px;
+  float: left;
+  fill: white;
+  border-bottom: 1px solid white;
 }
-.open span {
-  background: #fff;
-}
-.open :first-child {
-  transform: translateY(5px) rotate(-45deg);
-}
-.open :nth-child(2) {
-  transform: rotate(-45deg);
-  opacity: 0;
-}
-.open :last-child {
-  transform: translateY(-5px) rotate(-135deg);
-}
+
+
 .nav-toggle {
   position: fixed;
   z-index: 11000;
@@ -335,42 +337,43 @@ span:nth-child(2) {
   transform: translateX(-100%);
   transition: .5s;
 }
-.open + .nav-toggle {
-  transform: none;
+.open { 
+
+	.nav-toggle {
+		transform: none;
+	}
+  	.b{
+  	opacity: 0;
+  }
 }
 
-.hidden {
-  width: 80px;
-  float: left;
-  fill: white;
-  border: 1px solid #020202;
-}
+
 
 .menu {
-  margin-top: 60px;
-  /*background-color: red;*/
- //  ul {
-	//   margin: 0;
-	//   list-style: none;
-	//   padding: 0;
-	// }
+  margin-top: 0;
+  
+  ul {
+	  margin: 0;
+	   list-style: none;
+	  padding: 0;
+	 }
 
-	// li {
-	//   padding-top: 0;
-	//   font-size: 20px;
-	//   color: white; 
+	 li {
+   padding-top: 0;
+	  font-size: 20px;
+	  color: white; 
 
-	// }
-	// ul li a {
-	//   display: block;
-	//   text-decoration: none;
-	// }
+	 }
+	 ul li a {
+	   display: block;
+	  text-decoration: none;
+	 }
 
-	// ul li a:hover {
+	 ul li a:hover {
 
-	// color: green;
-	// background-color: #6b6868;
-	// }
+	 color: green;
+	 background-color: black;
+	 }
 }
 .side-navigation{
 	width: 80px;
@@ -381,22 +384,22 @@ span:nth-child(2) {
     right: 0;
 }
 /* Navigation Menu*/
-.navigation {
+// .navigation {
 
-  width: 80px;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 11000;
-
-
-  list-style: none;
-  background: #1D1B1F;
+//   width: 80px;
+//   height: 100%;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   z-index: 11000;
 
 
-  padding-top: 0px;
-}
+//   list-style: none;
+//   background: #1D1B1F;
+
+
+//   padding-top: 0px;
+// }
 
 
 
@@ -530,4 +533,81 @@ label[for="nav-trigger"] {
   filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0'/></filter></svg>#grayscale");
   -webkit-filter: none;
   filter: none;
+}
+//HTML5 video section
+
+#big-video {
+    position: relative;
+    background: #000;
+    overflow: hidden;
+    @media (min-width: 1200px){
+    	min-height: 720px;
+    }
+    @media (min-width:468px) and (max-width: 1199px){
+		min-height: 480px;
+    }
+    @media (max-width:467px){
+    	min-height: 300px;
+    }
+}
+
+#big-video .video {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+#big-video video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+#big-video .video-element {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+}
+
+.overlayheadlines {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.headlines{
+	position: relative;
+    z-index: 2;
+    width: 100%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    opacity: 1;
+    // color: white;
+  	text-shadow: 1px 1px 1px rgba(150, 150, 165, 0.7);
+    -webkit-transition: 500ms opacity;
+    -moz-transition: 500ms opacity;
+    -o-transition: 500ms opacity;
+    -ms-transition: 500ms opacity;
+    transition: 500ms opacity;
+}
+
+body.open .transparent-overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0, 0.7);
+	z-index: 10;
 }
