fix the merged code from Sai pull request

--- a/css/partials/_city-sai.scss
+++ b/css/partials/_city-sai.scss
@@ -1,24 +1,24 @@
-html {
-  font-family: "roboto", helvetica;
-  position: relative;
-  height: 100%;
-  font-size: 100%;
-  line-height: 1.5;
-  color: #444;
-}
+// html {
+//   font-family: "roboto", helvetica;
+//   position: relative;
+//   height: 100%;
+//   font-size: 100%;
+//   line-height: 1.5;
+//   color: #444;
+// }
 
-h2 {
-  margin: 1.75em 0 0;
-  font-size: 5vw;
-}
+// h2 {
+//   margin: 1.75em 0 0;
+//   font-size: 5vw;
+// }
 
-h3 { font-size: 1.3em; }
+// h3 { font-size: 1.3em; }
 
-.close {
-  font-size: 50px;
-}
+// .close {
+//   font-size: 50px;
+// }
 
-.v-center {
+.v-center2 {
   
   width: 100%;
   display: table;
@@ -27,7 +27,7 @@ h3 { font-size: 1.3em; }
   left:10em;
 }
 
-.v-center > div {
+.v-center2 > div {
   display: table-cell;
   vertical-align: middle;
   position: relative;
