--- a/css/style.scss
+++ b/css/style.scss
@@ -9,4 +9,4 @@
 @import "partials/themecity";
 @import "partials/hover";
 @import "partials/smoothslider";
-@import "partials/city-sai"
+@import "partials/city-sai"; // needed to change the file
