--- a/css/style.scss
+++ b/css/style.scss
@@ -12,4 +12,5 @@
 @import "partials/city-sai"; // needed to change the file
 @import "partials/themebeach";
 @import "partials/themewine";
+@import "partials/themefood";
 
