--- a/css/partials/_city-sai.scss
+++ b/css/partials/_city-sai.scss
@@ -103,7 +103,7 @@
 .modal-overlay {
   opacity: 0;
   filter: alpha(opacity=0);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 900;
