--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -304,7 +304,7 @@ footer {
   transition:opacity 0.3s;
 
 }
-span {
+.b span {
   display: block;
   width: 16px;
   height: 2px;
@@ -313,9 +313,12 @@ span {
   pointer-events: none;
   background-color: white;
 }
-span:nth-child(2) {
+.b span:nth-child(2) {
   margin: 3px 0;
 }
+
+// Toggle Nav Left from Chrys
+
 
 
 .hidden_1 {
