--- a/css/partials/_theme.scss
+++ b/css/partials/_theme.scss
@@ -639,3 +639,20 @@ svg:hover path {
 	overflow: hidden;
 	margin: 0 auto;
 }
+
+//moving icon
+.icon {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: solid 2px #fff;
+  border-radius: 20px;
+  z-index: 6;
+}
+a.moving-arrow{
+	color:white;
+}
