quiz in javascrip

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,4 +8,6 @@
 @import "partials/pushmenu";
 @import "partials/themecity";
 @import "partials/hover";
-@import "partials/smoothslider"
+@import "partials/smoothslider";
+@import "partials/city-sai"; // needed to change the file
+@import "partials/themewine";
