housekeeping changes and few fixes in index.html and category pages

--- a/css/style.scss
+++ b/css/style.scss
@@ -9,7 +9,7 @@
 @import "partials/themecity";
 @import "partials/hover";
 @import "partials/smoothslider";
-@import "partials/city-sai"; // needed to change the file
+@import "partials/city-sai"; 
 @import "partials/themebeach";
 @import "partials/themewine";
 @import "partials/themefood";
