--- a/css/partials/_hover.scss
+++ b/css/partials/_hover.scss
@@ -28,6 +28,7 @@
 		top:0;
 		background-color: rgba(241, 110, 72, 0.7);
 		min-height: 100%;
+		min-width: 100%;
 		 -webkit-transition: opacity 0.5s ease-in-out;
   	  	-moz-transition: opacity 0.5s ease-in-out;
    	 	-ms-transition: opacity 0.5s ease-in-out;
@@ -36,11 +37,12 @@
 		
 	}
 	.thum-hovertwo {
-			opacity: 1;
+		opacity: 1;
 		z-index: 1;
 		top:0;
 		background-color: rgba(129, 207, 215, 0.7);
 		min-height: 100%;
+		min-width: 100%;
 		 -webkit-transition: opacity 0.5s ease-in-out;
   	  	-moz-transition: opacity 0.5s ease-in-out;
    	 	-ms-transition: opacity 0.5s ease-in-out;
