--- a/css/partials/_themecity.scss
+++ b/css/partials/_themecity.scss
@@ -3,7 +3,7 @@
 
 #ctsection1 {
 	// background-image: url(../img/1.jpg);
-	background-image: url("../img/city-02.jpg");
+	background-image: url("../img/city-02-02.jpg");
 }
 
 #ctsection2 {
@@ -25,3 +25,44 @@
 	// background-image: url(../img/5.jpg);
 	background-image: url("../img/city-01.jpg");
 }
+
+.gradient-1 {
+	height: 100%;
+	background: linear-gradient(270deg, rgba(211,145,72,0.4), rgba(69,122,138,0.3));
+	background-size: 400% 400%;
+	-webkit-animation: AnimationName 34s ease infinite;
+	-moz-animation: AnimationName 34s ease infinite;
+	-o-animation: AnimationName 34s ease infinite;
+	animation: AnimationName 34s ease infinite;
+
+}
+.gradient-2 {
+	height: 100%;
+	background: linear-gradient(270deg, rgba(217,105,116,0.4), rgba(101,145,118,0.3));
+	background-size: 400% 400%;
+	-webkit-animation: AnimationName 34s ease infinite;
+	-moz-animation: AnimationName 34s ease infinite;
+	-o-animation: AnimationName 34s ease infinite;
+	animation: AnimationName 34s ease infinite;
+
+}
+	@-webkit-keyframes AnimationName {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	@-moz-keyframes AnimationName {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	@-o-keyframes AnimationName {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
+	@keyframes AnimationName {
+	    0%{background-position:0% 50%}
+	    50%{background-position:100% 50%}
+	    100%{background-position:0% 50%}
+	}
